apps/kubecost/overlays/ops-test/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubecost
  namespace: monitoring
  annotations:
    link.argocd.argoproj.io/external-link: https://kubecost.devxp-tech.io
spec:
  hosts:
  - "kubecost.devxp-tech.io"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9090
        host: kubecost-cost-analyzer.kubecost.svc.lgsk8sp1.grupologos.local
